2004-10-22  Tim Perdue <tim@gforge.org>

	* Changed db/gforge3.sql to db/gforge.sql - gforge.sql is 
	current snapshot as of 2004-10-22

2004-10-22  Tom Copeland <tom@infoether.com>

	* www/news/submit.php - Fixed bug [#918] news description 
	length is wrongly checked.

2004-10-21  Christian Bayle <bayle@aist.enst.fr>

	* replaced PortugueseBrazilian.tab with the one provided by 
	Marcelo Minholi

2004-10-20  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed default priority level and priority colors box

2004-10-17  Guillaume Smet <guillaume-gforge@smet.org>

	* made cron manager usable by adding pagination

2004-10-16  Guillaume Smet <guillaume-gforge@smet.org>

	* reorganized search engine code and made it more flexible
	* localized news
	* fixed a few localization problems
	* fixed and updated French translation

2004-10-15  Guillaume Smet <guillaume-gforge@smet.org>

	* put back in link to forum in notification mail

2004-10-14  GForge Group <luis@gforgegroup.com>

	* Added a text-only ultralite theme

2004-10-13  Francisco Gimeno <kikov@kikov.org>

	* I18N: Spanish.tab updated

2004-10-13  Guillaume Smet <guillaume-gforge@smet.org>

	* updated French translation
	* applied [#924] cronjobs/crontab.in: Call PHP CLI with
	Apache's php.ini by Ognyan Kulev

2004-10-12  Guillaume Smet <guillaume-gforge@smet.org>

	* first part of GUS heavily based on [#833] Grand Unified Search
	by Dominik Haas

2004-10-11  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed [#927] RBAC error when changing a project to private in
	the observer role section
	* enable_anoncvs -> enable_anonscm in cvs-cron/usergroup.php

2004-10-10  Guillaume Smet <guillaume-gforge@smet.org>

	* doc: applied [#916] Complete merge of INSTALL into Installation Guide
	* doc: made a lot of corrections and adds on Installation Guide

2004-10-09  Guillaume Smet <guillaume-gforge@smet.org>

	* updated French translation
	* fixed [#920] Problem accessing release notes of a private package