@@ -36,7 +36,7 @@ Description: Collaborative development tool - shared files
 
 Package: gforge-web-apache
 Architecture: all
-Depends: gforge-common, gforge-db-postgresql | gforge-db, apache2 (>= 2.0.52) | apache (>= 1.3.26) | apache-ssl (>= 1.3.26) | apache-perl (>= 1.3.26), apache2 (>= 2.0.52) | libapache-mod-ssl | apache-ssl, libapache2-mod-php4 | libapache-mod-php4 | php4, php4-cgi, php4-pgsql, php4-gd, php4-ldap, perl, perl-suid, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 1.0.32), slapd (>= 2.0.23-3), cronolog
+Depends: gforge-common, gforge-db-postgresql | gforge-db, apache2 (>= 2.0.52) | apache (>= 1.3.26) | apache-ssl (>= 1.3.26) | apache-perl (>= 1.3.26), apache2 (>= 2.0.52) | libapache-mod-ssl | apache-ssl, libapache2-mod-php4 | libapache-mod-php4 | php4, php4-cgi, php4-pgsql, php4-gd, perl, perl-suid, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 1.0.32), cronolog
 Suggests: libphp-jpgraph
 Replaces: sourceforge-web-apache (>> 2.6-0+11)
 Provides: gforge-web
